language/move-lang/tests/move_check/parser/module_missing_lbrace.exp
error: 

   ┌── tests/move_check/parser/module_missing_lbrace.move:2:5 ───
   │
 2 │     fun f() {}
   │     ^^^ Unexpected 'fun'
   ·
 2 │     fun f() {}
   │     --- Expected '{'
   │

